--- a/root.tex
+++ b/root.tex
@@ -4,6 +4,7 @@
 \thispagestyle{empty}
 
 \begin{document}
+	\textit{Mục đích của những lần commit mới hoàn toàn để thử Vim/Neovim, không mang tính quá trình...}
 	\input{parts/03-table-of-contents.tex}
 	\input{parts/04-foreword.tex}
 
@@ -18,7 +19,7 @@
 	\begin{definition}[Khai triển fourier]
 		\textit{Khai triển fourier của hàm \(f\) được định nghĩa như sau:}
 		\begin{equation}
-			\mathfrak{F}[f](s)=\int_{-\infty}^\infty
+			\hat{f}(s) = \mathfrak{F}[f](s)=\int_{-\infty}^\infty
 				f(t)\cdot e^{-ist}dt
 			\label{eq:fourier01}
 		\end{equation}
