Pretty much done

--- a/parts/01-config.tex
+++ b/parts/01-config.tex
@@ -13,3 +13,5 @@
 \theoremstyle{definition}
 \newtheorem{definition}{Định nghĩa}[section]
 \newtheorem{theorem}{Định lý}[section]
+\newtheorem{example}{Ví dụ}[section]
+
