--- a/root.tex
+++ b/root.tex
@@ -5,15 +5,20 @@
 
 
 \begin{document}
-	\input{parts/0x-cover.tex}
-	\input{parts/03-table-of-contents.tex}
-	\input{parts/04-foreword.tex}
 
-	\section{Chuỗi Laurent và thặng dư}
-	\input{parts/10-residue.tex}
+\input{parts/0x-cover.tex}
+\input{parts/03-table-of-contents.tex}
+\input{parts/04-foreword.tex}
 
-	\section{Một số ứng dụng của thặng dư}
-	\input{parts/2x-partial-fraction.tex}
-	\input{parts/2x-interpolation.tex}
-	\input{parts/2x-inv-laplace.tex}
+\section{Chuỗi Laurent và thặng dư}
+
+\input{parts/10-residue.tex}
+
+\section{Một số ứng dụng của thặng dư}
+
+\input{parts/2x-partial-fraction.tex}
+\input{parts/2x-interpolation.tex}
+\input{parts/2x-inv-laplace.tex}
+\input{parts/2x-residue-sum.tex}
+
 \end{document}
