Adjust/add figure.

--- a/resources/fig-2.tex
+++ b/resources/fig-2.tex
@@ -26,7 +26,7 @@
 			(3,-0.5) -- (3,3);
 	\end{tikzpicture}
 	\centering
-	\caption{Hai nửa đường cong C}
+	\caption{Đường cong $C$}
 	\label{fig:fig2}
 \end{figure}
 
