--- a/parts/0x-cover.tex
+++ b/parts/0x-cover.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
-	\parbox{4.6em}{
-		\includegraphics[width=3.6em]{resources/bk.jpg}
+	\parbox{4.2em}{
+		\includegraphics[width=3.2em]{resources/bk.jpg}
 	}
-	\parbox{\textwidth-4.5em}{
-		{\huge Đại học Bách khoa Hà Nội\par}
+	\parbox{\textwidth-4.6em}{
+		{\LARGE Trường Đại học Bách khoa Hà Nội\par}
 		{\Large Viện Toán ứng dụng và Tin học}
 	}
 	\vfill
