Add theta function

--- a/nhap-mon/root.tex
+++ b/nhap-mon/root.tex
@@ -7,6 +7,7 @@
 \usepackage{amsthm}
 \usepackage{tikz}
 % \usepackage[a4paper]{geometry}
+\usetheme{material}
 
 \usetikzlibrary{shapes.geometric, arrows}
 \tikzstyle{process}=[rectangle, align=center, minimum width=3cm, minimum height=1cm, draw=black, text centered]
@@ -36,13 +37,14 @@
 \section{Tổng quan về ngành học}
 \begin{frame}{\secname}	
 	\begin{itemize}
+		\item Các định hướng của ngành
+		\item Các kiến thức được trang bị
 		\item Toán tin ra trường làm những gì?
-		\item Đặc trưng ngành.
-		\item f
+		\item Đặc trưng của ngành
 	\end{itemize}
 \end{frame}
 
-\section{Kĩ năng mềm}
+\section{Kĩ năng phát triển bản thân}
 \begin{frame}{\secname}
 	\begin{itemize}
 		\item Các chỉ số IEAQ
@@ -54,9 +56,10 @@
 	\end{itemize}	
 \end{frame}
 
-\section{Toán trong thực tế}
+\section{Toán ứng dụng trong thực tế}
 \begin{frame}{\secname}
 	\begin{itemize}
+		\item Tối ưu đa mục tiêu
 		\item Operation research
 		\item Mô hình hóa bài toán
 	\end{itemize}	
@@ -70,8 +73,7 @@
 \begin{frame}{\secname}
 	\begin{itemize}
 		\item Lịch sử nghiên cứu
-		\item Hàm $\zeta$
-		\item Phương trình hàm $\zeta$
+		\item Hàm $\zeta$ và phương trình hàm $\zeta$
 	\end{itemize}	
 \end{frame}
 \end{document}
