--- a/nhap-mon/speech.tex
+++ b/nhap-mon/speech.tex
@@ -42,9 +42,14 @@ Cung cấp kiến thức nền tảng về tin học: cấu trúc dữ liệu, g
 
 \section{Giả thuyết Riemann}
 
-\textbf{Giả thuyết Riemann: }Những không điểm không tầm thường của hàm số $\zeta(s)$ đều có phần thực nằm trên đường thẳng $\real(s) = 1/2$.
+\textbf{Giả thuyết Riemann: }Những không điểm không tầm thường của hàm số $\zeta(s)$ đều có phần thực nằm trên đường thẳng $\real(s) = 1/2$.\par
+Hàm zeta ($\zeta$):
 \begin{equation*}
 	\zeta(s) = \sum_{n=1}^\infty \frac 1 {n^s}
+\end{equation*}
+Hàm theta ($\theta$)
+\begin{equation*}
+	\theta(z,\tau) = \sum_{n=-\infty}^\infty \exp(\pi i n^2 \tau + 2\pi i n z)
 \end{equation*}
 
 \textbf{Lịch sử nghiên cứu:}\\
