fourier-transform: Update format

--- a/fourier-transform/root.tex
+++ b/fourier-transform/root.tex
@@ -16,7 +16,7 @@
 	\begin{minipage}[t]{0.1\textwidth}~\end{minipage}
 	\begin{minipage}[t]{0.4\textwidth}$\displaystyle#1$\end{minipage}
 	\begin{minipage}[t]{0.1\textwidth}$\displaystyle\to$\end{minipage}
-	\begin{minipage}[t]{0.4\textwidth}$\displaystyle#2$\end{minipage}\par
+	\begin{minipage}[t]{0.4\textwidth}\begin{center}$\displaystyle#2$\end{center}\end{minipage}\par
 }
 
 \begin{document}
