Update toan-roi-rac: Add section 2

--- a/toan-roi-rac/root.tex
+++ b/toan-roi-rac/root.tex
@@ -11,7 +11,7 @@
 \usepackage{mathtools}
 
 \usetikzlibrary{arrows}
-\tikzstyle{vertice}=[circle, draw=black, fill=black, inner sep=0.15em]
+\tikzstyle{vertice}=[circle, draw=black, fill=black, inner sep=1mm]
 \setlength{\parindent}{0pt}
 \linespread{1.15}
 
@@ -28,10 +28,12 @@
 \section{Đồ thị}
 \input{parts/basic-definition.tex}
 
-\section{Ma trận biểu diễn và đồng cấu}
-\section{Đường đi và chu trình}
-\section{Bậc của đỉnh}
-\section{Các phép toán trên đồ thị}
-\section{Một số kĩ thuật cơ bản}
-\section{Chuỗi bậc}
+\section{Ma trận biểu diễn và đẳng cấu}
+\input{parts/ma-tran-bieu-dien.tex}
+
+% \section{Đường đi và chu trình}
+% \section{Bậc của đỉnh}
+% \section{Các phép toán trên đồ thị}
+% \section{Một số kĩ thuật cơ bản}
+% \section{Chuỗi bậc}
 \end{document}
