--- a/toan-roi-rac/parts/basic-definition.tex
+++ b/toan-roi-rac/parts/basic-definition.tex
@@ -12,8 +12,7 @@ Một số khái niệm liên quan:
 	\item \textit{Bậc của đỉnh} $v$ là tổng số cạnh mà có $u$ là đầu mút. Nếu $v$ là đầu mút của một khuyên thì khuyên đó tính là 2 cạnh. Kí hiệu: $d(v)$
 	\item \textit{Bậc lớn nhất} trong $G$: $\Delta = \max\limits_{v\in V} \{d(v)\}$
 	\item \textit{Bậc nhỏ nhất} trong $G$: $\delta = \min\limits_{v\in V} \{d(v)\}$
-	\item \textit{Một đường đi} từ $v_1$ tới $v_n$ là một dãy sắp thứ tự các cạnh $(v_1v_2)$, $(v_2v_3),\cdots,(v_{n-1}v_n)$. $v_1$ gọi là \textit{đỉnh đầu} và $v_n$ gọi là \textit{đỉnh cuối}
-	\item \textit{Một chu trình} là đường đi mà có đỉnh đầu và đỉnh cuối trùng nhau.
+	\item \textit{Đường đi và chu trình:} (định nghĩa \ref{def:duong-di} và \ref{def:chu-trinh})
 \end{itemize}
 \input{figures/minh-hoa-mot-so-do-thi.tex}
 
