--- a/toan-roi-rac/root.tex
+++ b/toan-roi-rac/root.tex
@@ -10,6 +10,11 @@
 \usepackage{parskip}
 \usepackage{mathtools}
 
+% \let\oldforall\forall
+% \let\forall\undefined
+% \DeclareMathOperator{\forall}{\oldforall}
+% \newcommand{\forall}{\oldforall\ }
+
 \usetikzlibrary{arrows}
 \tikzstyle{vertice}=[circle, draw=black, fill=black, inner sep=1mm]
 \setlength{\parindent}{0pt}
@@ -19,19 +24,21 @@
 \newtheorem{example}{Ví dụ}[section]
 \newtheorem{theorem}{Định lý}[section]
 \newtheorem{lemma}{Bổ đề}[section]
+\newtheorem{proposition}{Mệnh đề}[section]
 
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 
 
 \begin{document}
 % \tableofcontents\pagebreak
-\hspace{1cm}\vfill
-\begin{center}
-	\textit{Trong bài viết, những định nghĩa, khái niệm, hoặc có chung biểu diễn tiếng Việt với nhau, hoặc chưa có từ tiếng Việt tương ứng, sẽ được giữ nguyên gốc tiếng Anh.}
-\end{center}
-\vfill
 
-\pagebreak
+% \hspace{1cm}\vfill
+% \begin{center}
+% 	\textit{Trong bài viết, những định nghĩa, khái niệm, hoặc có chung biểu diễn tiếng Việt với nhau, hoặc chưa có từ tiếng Việt tương ứng, sẽ được giữ nguyên gốc tiếng Anh.}
+% \end{center}
+% \vfill
+% \pagebreak
+
 \section{Đồ thị}
 \input{parts/basic-definition.tex}
 
@@ -39,18 +46,36 @@
 \input{parts/ma-tran-bieu-dien.tex}
 
 \section{Đường đi và chu trình}
-\begin{definition}
-	[đường đi]
-	Một \textbf{đường đi} (kí hiệu W) có độ dài $k$ là một dãy các \textbf{đỉnh và cạnh} $v_0, e_1, v_1, e_2,\cdots,e_k,v_k$ với $e_i = (v_{i-1},v_i)$. Độ dài của một đường đi kí hiệu là $l(W)$. Đỉnh $v_0$ gọi là đỉnh đầu và $v_k$ gọi là đỉnh cuối.
+\begin{definition}[đường đi]
+	\label{def:duong-di}
+	Một \textbf{đường đi} (kí hiệu W) có độ dài $k$ là một dãy các \textbf{đỉnh và cạnh} $v_0, e_1, v_1, e_2,\cdots,e_k,v_k$ với $e_i = (v_{i-1},v_i)$. Độ dài của một đường đi kí hiệu là $l(W)$. Đỉnh $v_0$ gọi là đỉnh đầu và $v_k$ gọi là đỉnh cuối. Nếu không có cạnh nào lặp lại, đường đi gọi là đơn. Nếu không có đỉnh nào lặp lại, đường đi gọi là sơ cấp.
 \end{definition}
-\begin{definition}
-	[trail, path]	Một \textbf{trail} là một đường đi mà không có cạnh nào bị lặp lại. Một \textbf{path} là đường đi mà không có đỉnh nào lặp lại.
-\end{definition}
-Đường đi, trail và path có độ dài lớn hơn một và đỉnh đầu, cuối trùng nhau thì được gọi là \textit{đóng}.
-\begin{definition}
-	[chu trình] Một chu trình là một trail mà chỉ có đỉnh đầu và đỉnh cuối trùng nhau.
+\begin{definition}[chu trình]
+	\label{def:chu-trinh}
+	 Một chu trình là một đường đi đơn mà có đỉnh đầu và đỉnh cuối trùng nhau. Nếu chỉ có đỉnh đầu và đỉnh cuối trùng nhau thì chu trình gọi là sơ cấp.
 \end{definition}
 Có thể thấy chu trình với độ dài 1 là một khuyên.
+\begin{proposition}
+	Đồ thị $G$ là liên thông $\iff ({\exists uv \in E})({ u\in V_1})({v \in V_2})$ với mọi $V_1,\,V_2 \ne \varnothing$ mà $V = V_1\cup V_2,\, V_1 \cap V_2 = \varnothing$ ($V_1,\,V_2$ là phân hoạch không rỗng của $V$)
+	\begin{proof}
+		Giả sử $G$ liên thông. Khi đó tồn tại một đường đi sơ cấp từ $u$ tới $v$, trên đường đi đó, sau đỉnh cuối cùng của $V_1$ mà nó đi qua là cạnh nối giữa $V_1$ và $V_2$. Giả sử $G$ không liên không. Chứng minh được chiều xuôi.\\
+		Gọi $H$ là một thành phần liên thông của $G$, chọn $V_1 = V(H)$. Khi đó không có cạnh nào của $G$ có một đầu mút thuộc $V_1$ và đầu mút còn lại thuộc $V_2$. Bằng cách đảo vế chứng minh được chiều ngược.
+	\end{proof}
+\end{proposition}
+
+\begin{theorem}
+Một cạnh của $G$ là cạnh cắt $\iff$ cạnh đó không thuộc chu trình sơ cấp nào.	
+\begin{proof}
+	Gọi $e=(uv)$ là một cạnh trong thành phần liên thông $H$ của $G$. Nếu đồ thị thu được từ $H$ bỏ đi $e$ (kí hiệu $H-e$) vẫn liên thông, thì tồn tại một đường đi sơ cấp từ $u$ tới $v$. Có thể thấy đường đi này nếu gắn thêm cạnh $e$ sẽ tạo thành một chu trình sơ cấp. Vậy nếu $e$ không phải cạnh cắt thì sẽ thuộc một chu trình sơ cấp. Nếu $e$ là cạnh cắt, $H$ bỏ đi $e$ không liên thông, không tồn tại đường đi từ $u$ tới $v$. (TBA?)
+\end{proof}
+\end{theorem}
+
+\begin{proposition}
+	Cho đồ thị $G = (V,E)$, $V=\{v_1, v_2,\ldots,v_n\}$ với $n \ge 3$. Nếu có ít nhất 2 trong các đồ thị con $G-v_1,G-v_2,\ldots,G-v_n$ ($G$ xóa đi đỉnh $v_i$) liên thông thì $G$ liên thông.
+	\begin{proof}
+		Giả sử $G$ không liên thông, $H_i,\, i = \overline{1,k}$ là các thành phần liên thông của $G$. Nếu xóa một đỉnh khỏi $H_i$ thì không làm thay đổi số thành phần liên thông, trừ khi $H_i = K_1$ (giảm đi còn $k-1$ thành phần liên thông). Nếu 2 trong số $G-v_1,G-v_2,\ldots,G-v_n$ liên thông thì $k = 2$ và $H_1 = H_2 = K_1$, mâu thuẫn với $n \ge 3$.
+	\end{proof}
+\end{proposition}
 % \section{Bậc của đỉnh}
 % \section{Các phép toán trên đồ thị}
 % \section{Một số kĩ thuật cơ bản}
