Update: toan-roi-rac

--- a/toan-roi-rac/parts/basic-definition.tex
+++ b/toan-roi-rac/parts/basic-definition.tex
@@ -46,3 +46,7 @@ Một số khái niệm liên quan:
 	[Đồ thị liên thông] Đồ thị $G$ gọi là liên thông $\iff \forall\ u,v \in V,\ \exists$ đường đi từ $u$ tới $v$. Ngược lại, nếu $\exists\ u,v \in V,\ \nexists$ đường đi từ $u$ tới $v$ thì $G$ là đồ thị \textbf{không} liên thông.
 \end{definition}
 \input{figures/do-thi-khong-lien-thong.tex}
+
+\begin{definition}
+	[Đồ thị chính quy] Đồ thị $G$ gọi là đồ thị chính quy nếu $\delta(G) = \Delta(G) = k$, khi đó ta gọi $G$ là $k$ -- chính quy. \label{def:do-thi-chinh-quy}
+\end{definition}
